<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center"
        android:text="@string/order_confirmation"
        android:textSize="@dimen/textsize"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/preview"
        android:layout_height="@dimen/preview"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_placeholder" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/product_name"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_below="@+id/textViewName"
        android:layout_marginTop="3dp"
        android:text="@string/lorem_ipsum"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_below="@+id/textViewProductName"
        android:layout_marginTop="3dp"
        android:text="@string/quantity"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textViewProductQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewQuantity"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/textViewQuantity"
        android:text="@string/lorem_ipsum"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/lorem_ipsum"
        android:textSize="@dimen/textsize"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMessage"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:background="@drawable/shadowround" >

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="@dimen/textsize" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/relClose" />

</RelativeLayout>