<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <include layout="@layout/dialog_login" >
            </include>
        </LinearLayout>

        <TextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llForgotPwd"
            android:layout_centerHorizontal="true"
            android:layout_margin="6dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Back to login"
            android:textSize="@dimen/textsize" />

        <LinearLayout
            android:id="@+id/llForm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/left_right_margin"
                    android:orientation="vertical"
                    android:paddingBottom="20dp" >

                    <EditText
                        android:id="@+id/edt_fname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/edt_lname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" >

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edt_height"
                            android:layout_toLeftOf="@+id/sp_gender"
                            android:background="@drawable/background_round_corner"
                            android:drawableRight="@drawable/ic_cal"
                            android:gravity="center_vertical"
                            android:hint="@string/date_of_birth"
                            android:paddingLeft="8dp"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/sp_gender"
                            android:layout_width="100dp"
                            android:layout_height="@dimen/edt_height"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="8dp"
                            android:background="@drawable/background_round_corner"
                            android:entries="@array/gender_values"
                            android:prompt="@string/select_gender"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/email_address"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/address"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/edt_city"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/city"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/edt_zip"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/zip"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/edt_state"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/state"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/sp_country"
                        style="?android:attr/spinnerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/country"
                        android:onClick="countryPressed"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edt_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_round_corner"
                        android:ems="10"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/llPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvCreatePwd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:paddingLeft="8dp"
                            android:text="Create Password"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/edtPwd"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edt_height"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/background_round_corner"
                            android:ems="10"
                            android:hint="@string/password_star"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:paddingLeft="8dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <EditText
                            android:id="@+id/edtCnfPwd"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edt_height"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/background_round_corner"
                            android:ems="10"
                            android:hint="@string/cnf_password_star"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:paddingLeft="8dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@android:color/darker_gray" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/rlPn"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginTop="0dp" >

                        <Switch
                            android:id="@+id/pnSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edt_height"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true" />

                        <TextView
                            android:id="@+id/tvPNlbl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="2dp"
                            android:layout_toLeftOf="@id/pnSwitch"
                            android:text="@string/tunr_off_pn"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlRedeem"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp" >

                        <LinearLayout
                            android:id="@+id/llRedeem"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="5dp" >

                            <include layout="@layout/redeem_bg" />
                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvNoRewardsForCOD"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom|left"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="8dp"
                        android:gravity="bottom"
                        android:paddingLeft="8dp"
                        android:text="@string/no_reward_cod"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/veTermsOfUse"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="left"
                        android:orientation="vertical"
                        android:padding="0dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_of_use"
                            android:textSize="18sp"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/hyperlink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_of_use_hyperlink"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottonView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textSize="@dimen/textsize"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/llDevider"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/header_height"
                    android:visibility="gone" >
                </LinearLayout>

                <Button
                    android:id="@+id/btn_buy"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:onClick="buyPressed"
                    android:text="@string/buy"
                    android:textSize="@dimen/textsize"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>