<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edt_comments"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/background_round_corner"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/comment_hint"
        android:imeOptions="actionNext"
        android:maxLength="200"
        android:paddingLeft="8dp"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_Name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_marginTop="6dp"
        android:background="@drawable/background_round_corner"
        android:ems="10"
        android:hint="@string/name_hint"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_marginTop="6dp"
        android:background="@drawable/background_round_corner"
        android:ems="10"
        android:hint="@string/email_hint"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_submitReview"
        android:layout_width="120dp"
        android:layout_height="@dimen/button_height"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="Submit"
        android:textSize="@dimen/textsize" />

</LinearLayout>